--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 /*banner button*/
 #event-button0 {
-    background-color: #b03434;
-    border-color: #791715;
     height: 50px;
     width: 185px;
     padding-top: 12px;
@@ -19,6 +17,11 @@
     height: 50px;
     width: 100%;
     text-align: center;
+}
+
+.disabled-button {
+    background-color: #b03434 !important;
+    border-color: #791715 !important;
 }
 
 /* formato del programa */
