[IMP] Mesas de dialogo en programa

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,16 @@ hr {
   margin: -28px 0px 30px 85px;
   width: 80%;
 }
+
+.day .mesa-header {
+  padding-left: 0px;
+  padding-top: 0px;
+}
+
+.day .mesa {
+  min-height: 315px;
+}
+
 /*banner button*/
 #event-button0 {
     height: 50px;
